syntax = "proto3";

package proto.todo.v1;

import "buf/validate/validate.proto";

option go_package = "connect-todo-tutorial-backend/gen/proto/todo/v1;todov1";

service TodoService {
  rpc ListTodos (ListTodosRequest) returns (ListTodosResponse);
  rpc GetTodo (GetTodoRequest) returns (GetTodoResponse);
  rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse);
  rpc UpdateTodo (UpdateTodoRequest) returns (UpdateTodoResponse);
  rpc DeleteTodo (DeleteTodoRequest) returns (DeleteTodoResponse);
}

message Todo {
  string id = 1;
  string name = 2;
  bool is_done = 3;
}

message ListTodosRequest {
}

message ListTodosResponse {
  repeated Todo todos = 1;
}

message GetTodoRequest {
  // string id = 1 [(buf.validate.field).string.min_len = 1];
  string id = 1 [(buf.validate.field).required = true];
}

message GetTodoResponse {
  Todo todo = 1;
}

message CreateTodoRequest {
  string name = 1;
}

message CreateTodoResponse {
  Todo todo = 1;
}

message UpdateTodoRequest {
  string id = 1;
  string name = 2;
  bool is_done = 3;
}

message UpdateTodoResponse {
  Todo todo = 1;
}

message DeleteTodoRequest {
  string id = 1;
}

message DeleteTodoResponse {
}